--- a/index.ipynb
+++ b/index.ipynb
@@ -46,24 +46,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger Class Here"
+    "# Define Passenger Class Here\n",
+    "class Passenger:\n",
+    "    def __init__(self, first=None, last=None, email=None, rides_taken=None):\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.email = email\n",
+    "        self.rides_taken = rides_taken\n",
+    "#AL: This instantiates the class and creates default attributes. When initializing a new instance object, we can choose\n",
+    "# to input arguments when we call the class, or we can allow them to resort to default. \n",
+    "# We make sure to put 'self' first so that the method is called upon the object passed to it. \n",
+    "# We do not have to explicitly put self when we are initializing a passenger instance object because \n",
+    "#it already does that implicitly."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rebecca\n",
+      "Black\n",
+      "rebecca.black@gmail.com\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "rebecca_black = None # initialize Rebecca Black here\n",
+    "rebecca_black = Passenger(first='Rebecca', last='Black', email='rebecca.black@gmail.com') # initialize Rebecca Black here\n",
     "print(rebecca_black.first) # \"Rebecca\"\n",
     "print(rebecca_black.last) # \"Black\"\n",
     "print(rebecca_black.email) # \"rebecca.black@gmail.com\"\n",
@@ -95,25 +113,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger Class Here"
+    "# Define Driver Class Here\n",
+    "class Driver:\n",
+    "        def __init__(self, first=None, last=None, favorite_hobby='driving'):\n",
+    "            self.first=first\n",
+    "            self.last= last\n",
+    "            self.favorite_hobby = favorite_hobby"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dale\n",
+      "Earnhardt\n",
+      "driving\n"
+     ]
+    }
+   ],
    "source": [
-    "dale_earnhardt = None # initialize Dale Earnhardt here\n",
+    "dale_earnhardt = Driver(first='Dale', last= 'Earnhardt') # initialize Dale Earnhardt here\n",
     "print(dale_earnhardt.first) # \"Dale\"\n",
     "print(dale_earnhardt.last) # \"Earnhardt\"\n",
     "print(dale_earnhardt.favorite_hobby) # \"driving\""
@@ -150,9 +180,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -164,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
