--- a/index.ipynb
+++ b/index.ipynb
@@ -45,6 +45,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***QUESTION***\n",
+    "  - The solution uses the code below and imports Passenger and Driver. Is that necessary? What does that do? \n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
